# cmake-eglot

./: CMakeLists.txt  main.cpp  message.proto
